Auth ( Login And Sign Up )

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
     "cloudinary": "^1.41.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.0.3",
     "graphql-request": "^6.1.0",
     "gsap": "^3.12.5",
@@ -37,13 +40,16 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.6.0",
+    "react-redux": "^9.1.1",
     "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.1",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@grafbase/sdk": "^0.13.1",
