--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mapbox-gl": "^3.1.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "cloudinary": "^1.41.1",
@@ -31,17 +32,21 @@
     "i18next": "^23.8.2",
     "i18next-resources-to-backend": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.4",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.3.0",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "next-i18n-router": "^5.3.1",
     "next-intl": "^3.7.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.6.0",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.1",
     "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
